codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__provider_manager__tests__provider_replace_openai_Active.snap
---
source: tui/src/chatwidget/provider_manager.rs
expression: "crate::chatwidget::tests::helpers::render_bottom_popup(&chat, 90)"
---
  OpenAI
  Active

› 1. Deactivate                   Exclude this provider from use; credentials are kept.
  2. Replace with OpenAI account  OpenAI account
  3. Replace with API key         API key

  Press enter to confirm or esc to go back
